--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import newton, bisect\n",
+    "from scipy.optimize import newton, brentq\n",
     "from datetime import datetime\n",
     "\n",
     "# Step 1: Load and Preprocess Data\n",
@@ -25,9 +25,23 @@
     "def npv_annualized_r(data, rate):\n",
     "    return np.sum(data['Amount'] / (1 + rate) ** (data['Days'] / 365))\n",
     "\n",
+    "def npv_annualized_r_prime(data, rate):\n",
+    "    return np.sum(-data['Days'] / 365 * data['Amount'] / (1 + rate) ** (data['Days'] / 365 + 1))\n",
+    "\n",
+    "def npv_annualized_r_double_prime(data, rate):\n",
+    "    return np.sum(data['Days'] / 365 * (data['Days'] / 365 + 1) * data['Amount'] / (1 + rate) ** (data['Days'] / 365 + 2))\n",
+    "\n",
     "def npv_deannualized_r(data, rate):\n",
     "    N = data['Days'].iloc[-1]\n",
     "    return np.sum(data['Amount'] / (1 + rate) ** (data['Days'] / N))\n",
+    "\n",
+    "def npv_deannualized_r_prime(data, rate):\n",
+    "    N = data['Days'].iloc[-1]\n",
+    "    return np.sum(-data['Days'] / N * data['Amount'] / (1 + rate) ** (data['Days'] / N + 1))\n",
+    "\n",
+    "def npv_deannualized_r_double_prime(data, rate):\n",
+    "    N = data['Days'].iloc[-1]\n",
+    "    return np.sum(data['Days'] / N * (data['Days'] / N + 1) * data['Amount'] / (1 + rate) ** (data['Days'] / N + 2))\n",
     "\n",
     "def npv_annualized_x(data, x):\n",
     "    return np.sum(data['Amount'] * (x ** (data['Days'] / 365)))\n",
@@ -48,12 +62,12 @@
     "\n",
     "# Step 4: Root Solvers\n",
     "# Newton-Raphson Solver\n",
-    "def newton_raphson_solver(npv_function, data, initial_guess):\n",
-    "    return newton(lambda r: npv_function(data, r), initial_guess)\n",
+    "def newton_raphson_solver(npv_function, npv_derivatives, data, initial_guess):\n",
+    "    return newton(lambda r: npv_function(data, r), initial_guess, fprime=lambda r: npv_derivatives[0](data, r), maxiter=200)\n",
     "\n",
     "# Bisection Solver\n",
     "def bisection_solver(npv_function, data, lower_bound, upper_bound):\n",
-    "    return bisect(lambda r: npv_function(data, r), lower_bound, upper_bound, xtol=1e-20)\n",
+    "    return brentq(lambda r: npv_function(data, r), lower_bound, upper_bound, xtol=1e-20)\n",
     "\n",
     "# Helper function to determine if positive root exists\n",
     "def positive_root_exists(data):\n",
@@ -67,7 +81,7 @@
     "    last_cashflow_sign = np.sign(data['Amount'].iloc[-1])\n",
     "    return total_cashflow_sign != last_cashflow_sign\n",
     "\n",
-    "def find_roots(npv_functions, data, guess):\n",
+    "def find_roots(npv_functions, npv_derivatives, data, guess):\n",
     "    # Check if positive and negative roots exist\n",
     "    positive_root = positive_root_exists(data)\n",
     "    negative_root = negative_root_exists(data)\n",
@@ -77,7 +91,7 @@
     "\n",
     "    # Attempt Newton-Raphson solver\n",
     "    try:\n",
-    "        root_newton_r = newton_raphson_solver(npv_functions[0], data, guess)\n",
+    "        root_newton_r = newton_raphson_solver(npv_functions[0], npv_derivatives, data, guess)\n",
     "        print(f\"IRR (Newton-Raphson): {root_newton_r}\")\n",
     "    except Exception as e:\n",
     "        print(f\"IRR (Newton-Raphson): {e}\")\n",
@@ -86,14 +100,15 @@
     "    if positive_root:\n",
     "        try:\n",
     "            root_bisection_x = bisection_solver(npv_functions[1], data, 0, 1)  # Upper bound large for positive roots\n",
-    "            root_bisection_r = 1/root_bisection_x - 1\n",
-    "            print(f\"IRR (Bisection, positive root): {root_bisection_r}\")\n",
+    "            if root_bisection_x:\n",
+    "                root_bisection_r = 1/root_bisection_x - 1\n",
+    "                print(f\"IRR (Bisection, positive root): {root_bisection_r}\")\n",
     "        except Exception as e:\n",
     "            print(f\"IRR (Bisection, positive root): {e}\")\n",
     "    \n",
     "    if negative_root:\n",
     "        try:\n",
-    "            root_bisection_r = bisection_solver(npv_functions[0], data, -0.9999999, 0)  # Lower bound large for negative roots\n",
+    "            root_bisection_r = bisection_solver(npv_functions[0], data, -1+1e-20, 0)  # Lower bound large for negative roots\n",
     "            print(f\"IRR (Bisection, negative root): {root_bisection_r}\")\n",
     "        except Exception as e:\n",
     "            print(f\"IRR (Bisection, negative root): {e}\")\n",
@@ -101,8 +116,14 @@
     "def npv_annualized():\n",
     "    return (npv_annualized_r, npv_annualized_x)\n",
     "\n",
+    "def npv_annualized_r_derivatives():\n",
+    "    return (npv_annualized_r_prime, npv_annualized_r_double_prime)\n",
+    "\n",
     "def npv_deannualized():\n",
-    "    return (npv_deannualized_r, npv_deannualized_x)"
+    "    return (npv_deannualized_r, npv_deannualized_x)\n",
+    "\n",
+    "def npv_deannualized_r_derivatives():\n",
+    "    return (npv_deannualized_r_prime, npv_deannualized_r_double_prime)"
    ]
   },
   {
@@ -114,7 +135,7 @@
    "source": [
     "# Example Usage\n",
     "# Load data\n",
-    "file_path = 'convergence.csv'\n",
+    "file_path = 'cashflows.csv'\n",
     "data = load_csv(file_path)"
    ]
   },
@@ -152,91 +173,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1032</th>\n",
-       "      <td>1995-07-05</td>\n",
-       "      <td>-33750.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1031</th>\n",
-       "      <td>1995-09-06</td>\n",
-       "      <td>-33750.0</td>\n",
-       "      <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1030</th>\n",
-       "      <td>1996-02-09</td>\n",
-       "      <td>-33750.0</td>\n",
-       "      <td>219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029</th>\n",
-       "      <td>1996-04-15</td>\n",
-       "      <td>-33750.0</td>\n",
-       "      <td>285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1028</th>\n",
-       "      <td>1996-04-25</td>\n",
-       "      <td>146834.1</td>\n",
-       "      <td>295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-07-22</td>\n",
-       "      <td>-190000.0</td>\n",
-       "      <td>10610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-07-24</td>\n",
-       "      <td>52132.0</td>\n",
-       "      <td>10612</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-01-02</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-07-25</td>\n",
-       "      <td>123115.0</td>\n",
-       "      <td>10613</td>\n",
+       "      <td>2000-01-03</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-07-31</td>\n",
-       "      <td>-20000.0</td>\n",
-       "      <td>10619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-07-31</td>\n",
-       "      <td>53560948.2</td>\n",
-       "      <td>10619</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-01-04</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1033 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date      Amount   Days\n",
-       "1032 1995-07-05    -33750.0      0\n",
-       "1031 1995-09-06    -33750.0     63\n",
-       "1030 1996-02-09    -33750.0    219\n",
-       "1029 1996-04-15    -33750.0    285\n",
-       "1028 1996-04-25    146834.1    295\n",
-       "...         ...         ...    ...\n",
-       "4    2024-07-22   -190000.0  10610\n",
-       "3    2024-07-24     52132.0  10612\n",
-       "2    2024-07-25    123115.0  10613\n",
-       "1    2024-07-31    -20000.0  10619\n",
-       "0    2024-07-31  53560948.2  10619\n",
-       "\n",
-       "[1033 rows x 3 columns]"
+       "        Date  Amount  Days\n",
+       "0 2000-01-01       2     0\n",
+       "1 2000-01-02      -2     1\n",
+       "2 2000-01-03       4     2\n",
+       "3 2000-01-04      -1     3"
       ]
      },
      "execution_count": 3,
@@ -250,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1b39a62d-d511-4743-9472-9ff9b421f257",
    "metadata": {},
    "outputs": [
@@ -258,21 +227,114 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positive root exists: True\n",
-      "Negative root exists: False\n",
-      "IRR (Newton-Raphson): Failed to converge after 50 iterations, value is 4.900096213174578e+18.\n",
-      "IRR (Bisection, positive root): 4.760450083537949e+18\n"
+      "Positive root exists: False\n",
+      "Negative root exists: True\n",
+      "IRR (Newton-Raphson): Derivative was zero. Failed to converge after 10 iterations, value is -4.373262360068644e+168.\n",
+      "IRR (Bisection, negative root): The function value at x=-1.0 is NaN; solver cannot continue.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/code/calcs-explorer/pycalcs/lib/python3.12/site-packages/numpy/_core/_methods.py:53: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return umr_sum(a, axis, dtype, out, keepdims, initial, where)\n"
      ]
     }
    ],
    "source": [
-    "find_roots(npv_deannualized(), data, 0.1)"
+    "find_roots(npv_deannualized(), npv_deannualized_r_derivatives(), data, 0.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9ac0d3fb-805d-423b-8df6-3b93bd991a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_roots(npv_annualized(), npv_annualized_r_derivatives(), data, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d9371c-4331-46ef-819e-0942505fdc22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1 + 109.161)**(1/8766) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1a15ba9d-e1ee-4de7-ac28-ed0bfe729509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(6.201847985989789e-152)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "npv_deannualized_r(data, 1.612422623480998e+151)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba769034-9bf8-4d18-af54-c76a8d5d5e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "npv_annualized_x(data, 1e-100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77858be8-1d1d-4a63-a843-e22658eadef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 0.008486175745962223\n",
+    "d = 0\n",
+    "tau = -1/((t - 1)*(1 + d))\n",
+    "r = np.exp(-np.log(tau)/t) - 1\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "752f9825-ca57-4be1-a4d9-d82fac018f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t0*3653, t1*3653"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a92c1c-8272-4029-8a2d-8fb177580d32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "31/3653"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "230f039b-0c6e-4bbb-80b5-75efe7e4a752",
    "metadata": {},
    "outputs": [],
    "source": []
