add check for python 12

--- a/IRR-explorer.ipynb
+++ b/IRR-explorer.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ca9ec4c-3d3f-48ef-86e8-4f60765afeae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51d37157fbb445218e8f948518f8d4da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='cashflows.csv', description='CSV Name:', placeholder='Enter CSV file name'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import data_loading_widget\n",
     "\n",
@@ -22,10 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a214501-09a5-4867-bdd3-12d5307a53ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91e35ae439a246328b18a4384f0a72fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatText(value=-1.0, description='X min:'), FloatText(value=1.0, description='X max:'), Checkb…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import data_plotting_widget\n",
     "\n",
